<resources>
    <string name="app_name">LOTR</string>
    <string name="action_settings">Settings</string>

    <string name="lotr_appname">lotr</string>
    <string name="lotr_desc">Laundry Shop Management System</string>

    <string name="lotr_email">Email</string>
    <string name="lotr_password">Password</string>
    <string name="lotr_branch">Branch</string>
    <string name="lotr_adminCode">Admin Code</string>
    <string name="lotr_phone">Phone Number</string>
    <string name="lotr_code">Code</string>
    <string name="lotr_signin">Sign in</string>
    <string name="lotr_fullname">Full Name</string>
    <string name="lotr_forgetpass">Forget Password?</string>
    <string name="lotr_today">TODAY</string>

    <string name="lotr_register">Register</string>
    <string name="lotr_haveaccount">Already have an Account?</string>
    <string name="lotr_loginhere">Login Here</string>

    <string name="lotr_checkbox">Log in as Admin</string>

    <string name="signup_as">SIGNUP AS</string>
    <string name="Admin">ADMIN</string>
    <string name="Staff">STAFF</string>



    <string name ="regular_price">Regular Price (Per Kilo)</string>
    <string name ="additional_rate">Additional Rate (%)</string>
    <string name ="fabric_type">Fabric Type</string>
    <string name = "machine_washed">(Machine Washed | Regular Clothings)</string>
    <string name = "hand_washed">(Hand Washed)</string>

    <string name = "curtains_beddings">(Curtains | Beddings)</string>

    <string name = "empty_record">We\'ve come up empty!</string>
    <string name = "settled_date">SETTLED</string>
    <string name = "received_date">RECEIVED</string>
    <string name = "total">TOTAL</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="transactions">Transactions</string>
    <string name="staffs">Staffs</string>
    <string name="logout">Logout</string>
    <string name="rate">Rate</string>
    <string name="profile">Profile</string>


    <string name="action_example">Example action</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="wash_type">
        <item>Machine Washed</item>
        <item>Hand Washed</item>
    </string-array>





</resources>
