<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:id="@+id/login_container"
    tools:context="com.marquesevadera.lotr.Activities.LoginActivity">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/logo"
        android:layout_width="260dp"
        android:layout_height="210dp"
        android:layout_gravity="center"
        />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtEmail"
        android:layout_gravity="center"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:hint="@string/lotr_email"
        android:inputType="textEmailAddress"
        android:text=""
        app:met_floatingLabel="highlight"
        app:met_textColor="@color/colorGranite"
        app:met_textColorHint="@color/colorGranite"
        app:met_underlineColor="@color/colorGranite"
        app:met_primaryColor="@color/colorGranite"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtPassword"
        android:layout_gravity="center"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:hint="@string/lotr_password"
        android:inputType="textPassword"
        android:text=""
        app:met_floatingLabel="highlight"
        app:met_textColor="@color/colorGranite"
        app:met_textColorHint="@color/colorGranite"
        app:met_underlineColor="@color/colorGranite"
        app:met_primaryColor="@color/colorGranite"/>



    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/component_spacing" />


    <info.hoang8f.widget.FButton
        android:id="@+id/btnLogin"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/lotr_signin"
        app:buttonColor="@color/water"
        app:shadowColor="@color/shadow"
        app:shadowEnabled="true"
        app:cornerRadius="32dp"
        app:shadowHeight="5dp"
        android:clickable="true"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/component_spacing" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lotr_checkbox"
        android:id="@+id/chkbx_AsAdmin"
        android:textColor="@color/colorGranite"
        android:buttonTint="@color/colorGranite"
        android:checked="true"
        />


    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/component_spacing" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/component_spacing" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lotr_forgetpass"
        android:textColor="@color/colorGranite"
        android:textSize="16dp"
        android:onClick="onClick"
        android:id="@+id/forgetTV"
        android:clickable="true"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/component_spacing" />

    <TextView
        android:id="@+id/registerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lotr_register"
        android:textSize="16dp"
        android:textColor="@color/colorGranite"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_gravity="center_horizontal" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>


   
   
