<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/signup_fragment"
    android:orientation="vertical"
    tools:context="com.marquesevadera.lotr.Fragments.SignupMain">


        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/desc_bottom_padding" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/desc_bottom_padding" />


        <TextView
            android:id="@+id/appname2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_as"
            android:textSize="38dp"
            android:layout_gravity="center"
            android:fontFamily="courier"
            android:textStyle="bold"
            android:textColor="@color/colorGranite" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/desc_bottom_padding" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnAdmin"
            android:layout_width="311dp"
            android:layout_height="81dp"
            android:layout_gravity="center"
            android:text="@string/Admin"
            android:textSize="24dp"
            android:textColor="@color/colorGranite"
            app:buttonColor="@color/water"
            app:shadowColor="@color/shadow"
            app:shadowEnabled="true"
            app:cornerRadius="32dp"
            app:shadowHeight="5dp"
            android:clickable="true"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/desc_bottom_padding" />



        <info.hoang8f.widget.FButton
            android:id="@+id/btnStaff"
            android:layout_width="311dp"
            android:layout_height="81dp"
            android:layout_gravity="center"
            android:text="@string/Staff"
            android:textSize="24dp"
            android:textColor="@color/colorGranite"
            app:buttonColor="@color/water"
            app:shadowColor="@color/shadow"
            app:shadowEnabled="true"
            app:cornerRadius="32dp"
            app:shadowHeight="5dp"
            android:clickable="true"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/desc_bottom_padding" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/component_spacing" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lotr_haveaccount"
        android:textColor="@color/colorGranite"
        android:textSize="16dp"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/component_spacing" />

    <TextView
        android:id="@+id/signup_loginhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lotr_loginhere"
        android:textSize="16dp"
        android:textColor="@color/colorGranite"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:clickable="true"/>


</LinearLayout>
